8146222: assert(_initialized) failed: TLS not initialized yet!

Reviewed-by: dcubed